# beautiful-world

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  makefile
archive/: compile_commands.json
examples/: pathtracer_cornell.json  phong_spheres.json  simple_binary.json
include/: bvh.hpp  camera.hpp  image.hpp  intersection.hpp  light.hpp  material.hpp  random.h  raytracer.hpp  renderer.hpp  scene.hpp  shape.hpp  vector.hpp
materials/: mirror_image.json  pathtracer.json  vw.ppm:Zone.Identifier
src/: CMakeLists.txt  bvh.cpp  image.cpp  input.cpp  light.cpp  material.cpp  ray.cpp  raytracer.cpp  renderer.cpp  scene.cpp  shape.cpp  vector.cpp
